// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders correctly 1`] = `
Array [
  <ModalImage
    aspectRatio={1.7777777777777777}
    caption={
      <React.Fragment>
        <Text>
          Chris Reynolds Gordon at one of his party venues in London
        </Text>
        <Text>
          The credits
        </Text>
      </React.Fragment>
    }
    uri="https://crop169.io/"
    width={null}
  />,
  <Text>
    Chris Reynolds Gordon at one of his party venues in London
  </Text>,
  <Text>
    The credits
  </Text>,
]
`;

exports[`2. passes the caption rendered by rendermodalcaption to the modalimage 1`] = `
Array [
  <ModalImage
    aspectRatio={1}
    caption={
      <Text>
        Modal Caption
      </Text>
    }
    width={null}
  />,
  <Text>
    Caption
  </Text>,
]
`;
